@@ -7,10 +7,13 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import io.hammerhall.streamforge.domain.movie.Director;
 import io.hammerhall.streamforge.domain.movie.Movie;
 import io.hammerhall.streamforge.task.Base;
+
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+
 import lombok.NonNull;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
@@ -39,26 +42,18 @@ public class MovCode0018 extends Base {
      * @return список последних N уникальных имён режиссёров в алфавитном порядке
      */
     public List<String> task(@NonNull Collection<Movie> movies, int limit) {
-     return  movies.stream()
-             .map(movie -> movie.getDirectors())
-             .flatMap(directors -> directors.stream())
-             .map(Director::getFullName)
-             .distinct()
-             .sorted()
-             .collect(Collectors.toList())
-             .stream()
+        List<String> list = movies.stream()
+                .flatMap(movie -> movie.getDirectors().stream())
+                .map(Director::getFullName)
+                .distinct()
+                .sorted()
+                .toList();
 
-
-
-
-
-
-
-
-
-
-
-
+        return list.stream().skip(Math.max(0, list.size() - Math.max(0, limit))).toList();
+//       return   list.stream().sorted(Comparator.reverseOrder())
+//                 .limit(Math.max(0,limit))
+//                 .sorted()
+//                 .toList();
     }
 
     @Test
